- 添加粉丝/关注数量统计功能 - 添加粉丝/关注玩家显示功能

--- a/views/admin/user.manager.ejs
+++ b/views/admin/user.manager.ejs
@@ -16,7 +16,7 @@
 
 <div class="mb-2">
   <% for(const user of users){ %>
-  <%- include('./components/user.list.ejs', {user}) %>
+  <%- include('./components/user.card.ejs', {user}) %>
   <% } %>
 </div>
 
