--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -124,7 +124,7 @@ const href_template = `/u/${account.account}?show=${ locals.query.show || 'index
               <% }else{ %>
               <div><%= account.account %></div>
               <% } %>
-              <div><%= account.profile  || '暂无' %></div>
+              <div><%= account.profile  || '暂无简介~' %></div>
             </div>
           </div>
         </div>
