--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,8 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="<%=locals.settings.meta.keywords%>">
 <meta name="description" content="<%=locals.settings.meta.description%>">
-<link rel="stylesheet" href="/assets/bootstrap.css">
-<link rel="stylesheet" href="/assets/custom.css">
+<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="/assets/bootstrap-icons.css">
+<link rel="stylesheet" type="text/css" href="/assets/custom.css">
 <script src="/assets/bootstrap.js"></script>
 <style>
   body {
