--- a/views/render/category.ejs
+++ b/views/render/category.ejs
@@ -30,6 +30,7 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
 
     .breadcrumb a {
       color: #1b6091 !important;
+      text-decoration: none;
     }
 
     .breadcrumb-split {
