--- a/views/components/post.editor.ejs
+++ b/views/components/post.editor.ejs
@@ -34,6 +34,13 @@
   .emoji:hover {
     background-color: #f0f0f0;
   }
+
+
+  @media screen and (max-width: 768px) {
+    .container form {
+      padding: 4px;
+    }
+  }
 </style>
 
 <div class="jodit-editor">
