--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,4 +13,11 @@
   body {
     background-color: #f8f9fa;
   }
+
+  
+  @media screen and (max-width: 768px) {
+    .container{
+      padding: 4px;
+    }
+  }
 </style>
